tests/integration/fail/infinite_loops/x_eq_y_eq_z_eq_x.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::InfiniteRecursion'
{ x = y, y = z, z = x }.x